--- a/content/articles/2024-07-08-the-ai-revolution-in-it-adapting-mindsets-and-personalities-in-a-non-deterministic-world.mdx
+++ b/content/articles/2024-07-08-the-ai-revolution-in-it-adapting-mindsets-and-personalities-in-a-non-deterministic-world.mdx
@@ -2,80 +2,63 @@
 title: "The AI Revolution in IT: Adapting Mindsets and Personalities in a Non-Deterministic World"
 date: "2024-07-08"
 slug: "the-ai-revolution-in-it-adapting-mindsets-and-personalities-in-a-non-deterministic-world"
-excerpt: "A brief description of this article."
-tags: ["technology", "programming"]
-featuredImage: "/images/placeholder.jpg"
-ogTitle: "The AI Revolution in IT: Adapting Mindsets and Personalities in a Non-Deterministic World"
-ogDescription: "A brief description of this article for social media sharing."
-ogImage: "/images/placeholder-og.jpg"
-canonicalUrl: "https://techtavern.com/articles/2024/07/08/the-ai-revolution-in-it-adapting-mindsets-and-personalities-in-a-non-deterministic-world/"
-draft: false
+excerpt: "This is my excerpt"
+featuredImage: "/images/adapting-mindsets-and-personalities-to-ai.webp"
 ---
 I've witnessed numerous technological shifts throughout my career. I recall the paradigm shifts of Object Oriented and Functional programming, the rise of the World Wide Web, and the form factor and freedom of the Mobile Device. However, the emergence of AI in IT development presents a unique challenge that goes beyond mere technical adaptation. It's a fundamental shift in how we approach problem-solving, the developer mindset, and could very well reshape the personality of the IT community as a whole. Already, I am beginning to see a rising culture clash that many in our industry are only beginning to recognize too.
 
 As AI introduces us to opinionated systems that act with increasing autonomy, we are beginning to find that the underlying personalities and attitudes we have leaned on as a profession may no longer serve us well. Adapting to this new paradigm is as much a function of personality and emotional adaptation as it is learning a new system.
 
-The Deterministic Comfort Zone
+## The Deterministic Comfort Zone
 
 Traditionally, software engineering and data science have attracted professionals who thrive in deterministic environments. These are individuals who find satisfaction in applying well-defined processes and methodologies to reach predictable outcomes. The ability to control every aspect of a system's behavior through precise commands has been a cornerstone of our field.
 
-This deterministic approach has shaped not just our work, but our very personalities. It has drawn in those who find comfort in logic, structure, and predictability and reinforced those traits over time. For many, it's been more than a job – it's been a perfect alignment of personal inclination and professional requirements.
+This deterministic approach has shaped not just our work, but our very personalities. It has drawn in those who find comfort in logic, structure, and predictability and reinforced those traits over time. For many, it's been more than a job,it's been a perfect alignment of personal inclination and professional requirements.
 
-Enter AI: The Probabilistic Paradigm Shift
+## Enter AI: The Probabilistic Paradigm Shift
 
-AI is beginning to challenge this fundamental assumption of determinism in IT. We're beginning to get a glimpse of a world where software engineers are moving from issuing commands to one where AI is guided by us to make its own decisions about how to solve problems. This shift from deterministic to probabilistic models is *more than a technical change – it's an emotional and psychological one*.
+AI is beginning to challenge this fundamental assumption of determinism in IT. We're beginning to get a glimpse of a world where software engineers are moving from issuing commands to one where AI is guided by us to make its own decisions about how to solve problems. This shift from deterministic to probabilistic models is *more than a technical change, it's an emotional and psychological one*.
 
 Consider the implications:
 
-1\. Loss of Direct Control: Engineers accustomed to dictating every action of a system must now learn to guide and suggest, rather than command. We have to lean into a deep understanding of intent and outcome from the user's perspective in ways we've always advocated for, but found difficult to achieve.
-
-2\. Embracing Uncertainty: The predictable outcomes of traditional programming are giving way to probabilistic results that may vary with each execution. We have to lean into quality assurance, checks, and crowd-based confirmations. This means the systems we develop have to be naturally collaborative instead of declarative. Again, a long-time aspiration in the profession that goes unrealized more than we like to admit.
-
-3\. Redefining "Debugging": When an AI system produces unexpected results, the process of identifying and correcting issues becomes far more complex and less straightforward. We will have to lean into monitoring and working with AI systems as they self-guide. We have to lean into the IT professional as manager more, offering guidance and growth to AI "junior professionals".
+1. Loss of Direct Control: Engineers accustomed to dictating every action of a system must now learn to guide and suggest, rather than command. We have to lean into a deep understanding of intent and outcome from the user's perspective in ways we've always advocated for, but found difficult to achieve.
+2. Embracing Uncertainty: The predictable outcomes of traditional programming are giving way to probabilistic results that may vary with each execution. We have to lean into quality assurance, checks, and crowd-based confirmations. This means the systems we develop have to be naturally collaborative instead of declarative. Again, a long-time aspiration in the profession that goes unrealized more than we like to admit.
+3. Redefining "Debugging": When an AI system produces unexpected results, the process of identifying and correcting issues becomes far more complex and less straightforward. We will have to lean into monitoring and working with AI systems as they self-guide. We have to lean into the IT professional as manager more, offering guidance and growth to AI "junior professionals".
 
 A personal story I frequently share is that the book that has most prepared me for interacting with AI agents wasn't a book on IT, but a book on management. The pop-culture book "The 4-Hour Work Week" has chapters about summarizing as an executive, and even goes into depth about working with personal assistants. Part of its advice is to hire a personal assistant for a few months to learn to summarize in detail. This has been one of the more valuable experiences in successfully shaping my experience working with AI as it requires summarizing tasks and goals in exacting detail, as well as the expected outputs.
 
-The Emotional Challenge
+## The Emotional Challenge
 
 The emotional shift required of IT professionals in this new paradigm is substantial and often overlooked. We're asking individuals who have built careers on precision and control to embrace uncertainty and variability. This isn't just a matter of learning new tools or languages – it's about rewiring how we think about problem-solving at a fundamental level.
 
 For many, this shift will be uncomfortable, even anxiety-inducing. The sense of mastery that comes from controlling every aspect of a system is being replaced by a need to trust in AI's decision-making capabilities. This requires a level of adaptability and comfort with change that hasn't been as critical in IT roles before.
 
-The New IT Personality
+## The New IT Personality
 
 As AI continues to integrate into development workflows, we're likely to see a shift in the personality traits that define successful IT professionals. Some key characteristics that will become increasingly important include:
 
-1\. Adaptability: The ability to quickly adjust to new paradigms and ways of working, not just as user requirements shift and grow, but as we enter the acceleration brought on by AI advancements.
+1. Adaptability: The ability to quickly adjust to new paradigms and ways of working, not just as user requirements shift and grow, but as we enter the acceleration brought on by AI advancements.
+2. Emotional Intelligence: Understanding and managing one's own emotions, as well as those of team members and users as we navigate developing critical resources in a less deterministic way.
+3. Comfort with Ambiguity: Embracing uncertain outcomes and seeing them as opportunities rather than threats. For hiring managers, I believe it will be critical that we begin to recognize and appreciate people who see uncertainty as a chance to exercise creativity and add value.
+4. User-Centric Thinking: A deeper focus on understanding and internalizing user needs, beyond just technical requirements. Critical here will be the understanding and respect of user intent and the ability to summarize that for autonomous systems.
+5. Anxiety Management: The capacity to navigate the stress of constant change and unpredictability.
+6. Abstract Problem-Solving: Moving from concrete, step-by-step solutions to more abstract, goal-oriented approaches.
 
-2\. Emotional Intelligence: Understanding and managing one's own emotions, as well as those of team members and users as we navigate developing critical resources in a less deterministic way.
+## The Path Forward
 
-3\. Comfort with Ambiguity: Embracing uncertain outcomes and seeing them as opportunities rather than threats. For hiring managers, I believe it will be critical that we begin to recognize and appreciate people who see uncertainty as a chance to exercise creativity and add value.
-
-4\. User-Centric Thinking: A deeper focus on understanding and internalizing user needs, beyond just technical requirements. Critical here will be the understanding and respect of user intent and the ability to summarize that for autonomous systems.
-
-5\. Anxiety Management: The capacity to navigate the stress of constant change and unpredictability.
-
-6\. Abstract Problem-Solving: Moving from concrete, step-by-step solutions to more abstract, goal-oriented approaches.
-
-The Path Forward
-
-This shift presents both challenges and opportunities for our industry. Some current professionals will adapt and thrive in this new environment. Others may struggle with the transition. Simultaneously, we may see an influx of new talent – individuals whose natural inclinations align more closely with the demands of AI-driven development.
+This shift presents both challenges and opportunities for our industry. Some current professionals will adapt and thrive in this new environment. Others may struggle with the transition. Simultaneously, we may see an influx of new talent, individuals whose natural inclinations align more closely with the demands of AI-driven development.
 
 As leaders in the field, it's crucial that we recognize and address this shift. We need to:
 
-1\. Provide support and training to help current professionals adapt.
-
-2\. Adjust our hiring practices to value the traits needed in this new paradigm.
-
-3\. Foster a culture that embraces experimentation and learns from both successes and failures.
-
-4\. Encourage continuous learning and adaptability as core values in our teams.
+1. Provide support and training to help current professionals adapt.
+2. Adjust our hiring practices to value the traits needed in this new paradigm.
+3. Foster a culture that embraces experimentation and learns from both successes and failures.
+4. Encourage continuous learning and adaptability as core values in our teams.
 
 The future of IT belongs to those who can bridge the gap between human intent and AI capabilities. It requires professionals who can articulate user needs with precision, understand the nuances of human behavior, and translate these insights into guidance for AI systems.
 
-Conclusion
+## Conclusion
 
-The AI revolution in IT is more than a technological shift – it's a fundamental change in how we approach our work and who we are as professionals. By recognizing and embracing this change, we can help our teams and our industry navigate this transition successfully. The challenge is significant, but so is the opportunity to reshape our field and expand the boundaries of what technology can achieve.
+The AI revolution in IT is more than a technological shift, it's a fundamental change in how we approach our work and who we are as professionals. By recognizing and embracing this change, we can help our teams and our industry navigate this transition successfully. The challenge is significant, but so is the opportunity to reshape our field and expand the boundaries of what technology can achieve.
 
 As we move forward, let's approach this new era with openness, curiosity, and a willingness to evolve. The future of IT is probabilistic, adaptive, and deeply human – are you ready to embrace it?
-
