--- a/content/articles/2024-09-30-reflections-on-ai-governance-and-the-un-s-new-report.mdx
+++ b/content/articles/2024-09-30-reflections-on-ai-governance-and-the-un-s-new-report.mdx
@@ -2,16 +2,9 @@
 title: "Reflections on AI Governance and the UN's New Report"
 date: "2024-09-30"
 slug: "reflections-on-ai-governance-and-the-un-s-new-report"
-excerpt: "A brief description of this article."
-tags: ["technology", "programming"]
-featuredImage: "/images/placeholder.jpg"
-ogTitle: "Reflections on AI Governance and the UN's New Report"
-ogDescription: "A brief description of this article for social media sharing."
-ogImage: "/images/placeholder-og.jpg"
-canonicalUrl: "https://techtavern.com/articles/2024/09/30/reflections-on-ai-governance-and-the-un-s-new-report/"
-draft: false
+featuredImage: "/images/reflections-on-ai-governance-and-the-un.webp"
 ---
-The UN's new report on "[Governing AI for Humanity](https://www.un.org/sites/un2.un.org/files/governing_ai_for_humanity_final_report_en.pdf)" is a wake-up call we can't ignore. As CTO of [Data Friendly Space (DFS)](https://www.linkedin.com/company/data-friendly-space/) , here's why I believe this matters to every one of us:
+The UN's new report on "[Governing AI for Humanity](https://www.un.org/sites/un2.un.org/files/governing_ai_for_humanity_final_report_en.pdf)" is a wake-up call we can't ignore. As someone with 30 years of experience in evolving information systems for large-scale international efforts, here's why I believe this matters to every one of us:
 
 AI is the most transformative technology of my lifetime, with the potential to catapult humanity towards unprecedented prosperity or unfathomable risk. Its rapid emergence has left even experts racing to comprehend its global implications.
 
