--- a/content/articles/2024-10-07-the-future-of-software-engineering-belongs-to-people-who-understand-why.mdx
+++ b/content/articles/2024-10-07-the-future-of-software-engineering-belongs-to-people-who-understand-why.mdx
@@ -2,20 +2,13 @@
 title: "The Future of Software Engineering Belongs to People who Understand Why"
 date: "2024-10-07"
 slug: "the-future-of-software-engineering-belongs-to-people-who-understand-why"
-excerpt: "A brief description of this article."
-tags: ["technology", "programming"]
-featuredImage: "/images/placeholder.jpg"
-ogTitle: "The Future of Software Engineering Belongs to People who Understand Why"
-ogDescription: "A brief description of this article for social media sharing."
-ogImage: "/images/placeholder-og.jpg"
-canonicalUrl: "https://techtavern.com/articles/2024/10/07/the-future-of-software-engineering-belongs-to-people-who-understand-why/"
-draft: false
+featuredImage: "/images/future-of-software-engineering-belongs-to-people.webp"   
 ---
-As CTO of [Data Friendly Space (DFS)](https://www.linkedin.com/company/data-friendly-space/) , I've been pondering the future of software engineering in the age of AI. It's a topic generating a lot of buzz, with some claiming AI will replace software engineers entirely. But let's take a step back and look at the bigger picture.
+As someone with a long history of creating applicatyions and services, I've been pondering the future of software engineering in the age of AI. It's a topic generating a lot of buzz, with some claiming AI will replace software engineers entirely. But let's take a step back and look at the bigger picture.
 
 Throughout my 30-year career in software, from small scholarly projects to the largest federal government initiatives, one thing has been constant: writing code may be difficult, but the most challenging aspect of any project is defining what you need to do and why.
 
-AI represents the biggest shift in software engineering since the field emerged. But I think this change will be much more evolutionary than revolutionary. The Bureau of Labor Statistics projects a [25% growth](https://www.bls.gov/ooh/computer-and-information-technology/software-developers.htm#tab-6) in demand for software engineers by 2032\. At the same time, industry leaders like [Matt Garman](https://www.linkedin.com/in/mattgarman/) , CEO of Amazon Web Services, predict dramatic changes in the nature of our work.
+AI represents the biggest shift in software engineering since the field emerged. But I think this change will be much more evolutionary than revolutionary. The Bureau of Labor Statistics projects a [25% growth](https://www.bls.gov/ooh/computer-and-information-technology/software-developers.htm#tab-6) in demand for software engineers by 2032. At the same time, industry leaders like [Matt Garman](https://www.linkedin.com/in/mattgarman/) , CEO of Amazon Web Services, predict dramatic changes in the nature of our work.
 
 So, what's really changing? The focus is shifting away from the know-how of writing code to include a deep understanding of domain knowledge and the fundamental purpose of the software. In other words, we're moving from just the 'How' to emphasizing the 'What' and 'Why'.
 
@@ -29,10 +22,8 @@ Taken together, the 'Why' and 'What' are what we mean when we talk about the 'Al
 
 So, I agree that software engineering will change dramatically, but toward a much more human process. We'll see a sharp rise in demand for software engineers, with human engineering implicit in the job description.
 
-To those anticipating cost savings by reducing their software engineering workforce \- think again. Most organizations will need as many engineers as they have now, if not more. They'll just be able to accomplish more, assuming we understand 'What' we are trying to accomplish and 'Why' it's important. The key is to prepare for the shifting needs of the profession, helping existing engineers skill up in new areas and recognizing the evolving traits of top-tier software engineers in hiring. It's also likely that we will see as dramatic a shift in every other aspect of our organizations and society. Everyone, not just software engineers, will need to work together much more closely and clearly focus on our core goals.
+To those anticipating cost savings by reducing their software engineering workforce, think again. Most organizations will need as many engineers as they have now, if not more. They'll just be able to accomplish more, assuming we understand 'What' we are trying to accomplish and 'Why' it's important. The key is to prepare for the shifting needs of the profession, helping existing engineers skill up in new areas and recognizing the evolving traits of top-tier software engineers in hiring. It's also likely that we will see as dramatic a shift in every other aspect of our organizations and society. Everyone, not just software engineers, will need to work together much more closely and clearly focus on our core goals.
 
-Let's embrace this new era by focusing on what makes us uniquely human \- our ability to understand complex domains, define meaningful problems, and create solutions that truly matter. The future of software engineering isn't about being replaced by AI; it's about leveraging AI to enhance our human capabilities and drive innovation for the greater good.
+Let's embrace this new era by focusing on what makes us uniquely human - our ability to understand complex domains, define meaningful problems, and create solutions that truly matter. The future of software engineering isn't about being replaced by AI; it's about leveraging AI to enhance our human capabilities and drive innovation for the greater good.
 
 What's your take on the future of software engineering? How is your organization preparing for this AI-driven transformation?
-
-
